# sam2-segmentation-app

./: .gitignore  README.md
back/: .gitignore  Makefile  README.md  openapi.py  pyproject.toml  setup.sh
back/api/: main.py
back/api/clients/: __init__.py  sam2_client.py
back/api/core/: __init__.py  health_operations.py  utils.py  video_processing.py
back/api/models/: models.py
back/api/router/: __init__.py  health_router.py  segmentation.py  video.py
back/api/schema/: __init__.py  health.py  video.py
back/tests/api/router/: test_health_router.py
front/: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.mjs  next.config.ts  orval.config.ts  package-lock.json  package.json
front/src/app/: globals.css  page.tsx
front/src/components/: DataAndStatsTabPanel.tsx  FileInfoCard.tsx  FrameDisplay.tsx  FrameNavigation.tsx  FrameViewerCard.tsx  HealthStatusChecker.tsx  PromptsDataTable.tsx  SegmentationControlsCard.tsx  StatsCard.tsx  VideoFrameViewer.tsx
front/src/components/viewer/: FrameDisplay.tsx  FrameNavigation.tsx  PointDataTable.tsx  StatsCard.tsx  VideoFrameViewer.tsx
front/src/hooks/: useAPIOperations.ts  useImageHandling.ts  useKeyboardNavigation.ts  usePromptHandling.ts
front/src/lib/: axios.ts
front/src/types/: index.ts
